[FIX] the problem with z-index in the header

--- a/src/app/components/Header/Header.scss
+++ b/src/app/components/Header/Header.scss
@@ -9,7 +9,7 @@
 .header-root {
   background-color: var(--s-color-fill-default);
   position: sticky;
-  z-index: 98;
+  z-index: 97;
   top: 0;
   grid-area: header;
   display: flex;
